--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ verify_ssl = true
 
 [packages]
 click = "==6.7"
-djangorestframework = "==3.8.2"
+djangorestframework = ">=3.9.1"
 itsdangerous = "==0.24"
 py-spy = ">=0.1.4"
 pytz = "==2018.5"
@@ -15,7 +15,6 @@ Django = ">=2.1.5"
 Flask = "==1.0.2"
 Jinja2 = ">=2.10"
 MarkupSafe = "==1.0"
-Werkzeug = "==0.14.1"
 
 [requires]
 python_version = "3.7"
