--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,9 @@ authors = ["Your Name <your@email.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-click = "==6.7"
 djangorestframework = ">=3.9.1"
-itsdangerous = "==0.24"
 py-spy = "^0.3.14"
-pytz = "==2018.5"
+pytz = "^2024.1"
 django = ">=2.1.5"
-flask = "==1.0.2"
+flask = "^1.0.2"
 
